feat: add testing coverage and platform hardening